@@ -12,6 +12,10 @@
      [auth.h]
      login_cap.h doesn't belong here
      NB. RCS ID sync only for portable
+   - djm@cvs.openbsd.org 2007/08/23 03:22:16
+     [auth2-none.c sshd_config sshd_config.5]
+     Support "Banner=none" to disable displaying of the pre-login banner;
+     ok dtucker@ deraadt@
 
 20070914
  - (dtucker) [openbsd-compat/bsd-asprintf.c] Plug mem leak in error path.
@@ -3209,4 +3213,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4745 2007/09/17 01:55:25 djm Exp $
+$Id: ChangeLog,v 1.4746 2007/09/17 01:57:38 djm Exp $
